src/components/SharedComponents/MapCard/style.module.scss
.card {
  isolation: isolate;
  display: flex;
  flex-direction: column;
  position: relative;
  align-items: flex-start;

  width: $card-width;
  min-width: $card-width;
  height: $card-height;
  min-height: $card-height;
  gap: $spacing;
  padding: $spacing/2;

  border-radius: $border-radius;

  user-select: none;

  > img {
    width: $card-width;
    height: $card-height;
    border-radius: $border-radius;

    position: absolute;
    inset: 0;
  }

  // Fade for readability
  &::after,
  > div::after {
    content: '';
    position: absolute;
    inset: 0;
    background-color: black;
    opacity: 0.25;
    border-radius: inherit;
  }

  // Text line
  .songInfo,
  .title,
  .artist,
  .diff {
    position: relative;
    max-width: $card-width;
    text-overflow: ellipsis;
    text-align: left;
    white-space: nowrap;
    font-size: 1rem;

    color: $white;

    padding-right: $spacing/2;
    overflow: clip;
    overflow-clip-margin: $spacing/4;

    z-index: 1;

    &::after {
      z-index: -1;
      opacity: 1;
      background-color: rgba(0, 0, 0, 0.33);
      top: -$spacing/8;
      bottom: -$spacing/8;
      transform: translateX(-$spacing/4);
      backdrop-filter: blur(5px);
    }
  }

  .songInfo {
    max-width: $card-width - $spacing / 2;
  }

  .artist {
    font-size: 0.75rem;
    font-family: $inter;
    font-weight: 400;
    margin-left: 0.05rem;
  }

  .title {
    font-size: 1.25rem;
  }

  .diff {
    margin-top: auto;
  }

  .ownerAvatar {
    position: absolute;
    bottom: $spacing / 2;
    right: $spacing / 2;
    margin-left: auto;
    z-index: 2;
    box-shadow:
      0 0 0 0.1rem $color-primary,
      0 0 0 0.2rem $white;
  }

  .diff {
    max-width: $card-width - 2rem - $spacing * 1.5;
  }

  svg {
    aspect-ratio: 1/1;
    width: 0.8rem;
    height: 0.8rem;
    margin-right: $spacing / 4;
    transform: translateY(0.05rem);
  }

  .delete {
    position: absolute;
    top: $spacing / 2;
    right: $spacing / 2;
    height: 1.5rem;
    width: 1.5rem;
    padding: 0;
    font-size: 0.75rem;
    line-height: 0;
    z-index: 3;

    > svg {
      margin: auto;
      > path {
        fill: $color-danger;
      }
    }

    &:hover {
      > svg > path {
        fill: $color-background;
      }
    }
  }

  .loading {
    position: absolute;
    z-index: 3;
    inset: 0;
    background-color: transparent;
    backdrop-filter: blur(5px);
    border-radius: inherit;
  }

  .confirmation {
    position: absolute;
    z-index: 2;
    inset: 0;
    background-color: transparent;
    backdrop-filter: blur(5px);
    border-radius: inherit;

    display: flex;
    justify-content: center;
    align-items: center;

    > span {
      color: $white;
      z-index: 3;
    }
  }
}

.skeleton {
  @extend %skeleton;
  position: relative;

  width: $card-width;
  min-width: $card-width;
  height: $card-height;
  min-height: $card-height;

  padding: $spacing/2;

  display: flex;
  flex-direction: column;
  gap: $spacing / 4;

  .artist,
  .title,
  .ownerAvatar {
    background-color: $color-background;
  }

  .title {
    width: 90%;
    height: 1.35rem;
  }
  .artist {
    width: 50%;
    height: 0.85rem;
  }

  .ownerAvatar {
    width: 1.5rem;
    height: 1.5rem;
    border-radius: 999rem;

    position: absolute;
    bottom: $spacing / 2;
    right: $spacing / 2;
    box-shadow:
      0 0 0 0.1rem $color-primary,
      0 0 0 0.2rem $white;
  }
}

